RP3 fix:修复领域模型中掺杂instance的问题
