# internal/server/grpc.go
@@ -11,7 +11,7 @@ import (
 )
 
 // NewGRPCServer new a gRPC server.
-func NewGRPCServer(c *conf.Server, logger log.Logger, productSvc *service.ProductService, seckillSvc *service.SeckillService, instanceSvc *service.InstanceService) *grpc.Server {
+func NewGRPCServer(c *conf.Server, logger log.Logger, productSvc *service.ProductService, seckillSvc *service.SeckillService, orderSvc *service.OrderService) *grpc.Server {
 	var opts = []grpc.ServerOption{
 		grpc.Middleware(
 			recovery.Recovery(),
@@ -29,6 +29,6 @@ func NewGRPCServer(c *conf.Server, logger log.Logger, productSvc *service.Produc
 	srv := grpc.NewServer(opts...)
 	v1.RegisterProductServiceServer(srv, productSvc)
 	v1.RegisterSeckillServiceServer(srv, seckillSvc)
-	v1.RegisterInstanceServiceServer(srv, instanceSvc)
+	v1.RegisterOrderServiceServer(srv, orderSvc)
 	return srv
 }
